# flake-updates

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: main.rs
